Fix footer layout on tablet [Issue #81]

--- a/docs/assets/css/style.css
+++ b/docs/assets/css/style.css
@@ -747,7 +747,7 @@ footer {
   footer .col {
     display: flex;
     justify-content: space-evenly; }
-    @media screen and (max-width: 479px) {
+    @media screen and (max-width: 959px) {
       footer .col {
         display: block;
         text-align: center; } }
@@ -759,7 +759,22 @@ footer {
       footer .col-footer:first-of-type {
         width: 100%;
         text-align: center; } }
-  @media screen and (max-width: 479px) {
+  @media screen and (max-width: 959px) {
+    footer .col-footer:nth-child(2), footer .col-footer:nth-child(3), footer .col-footer:nth-child(4) {
+      float: left;
+      width: 33.33333333%;
+      padding: 0 15px;
+      margin-bottom: 35px; } }
+  @media screen and (max-width: 639px) {
+    footer .col-footer:nth-child(2), footer .col-footer:nth-child(3), footer .col-footer:nth-child(4) {
+      float: left;
+      width: 100%;
+      margin-bottom: 20px; } }
+  @media screen and (max-width: 959px) {
+    footer .col-footer:nth-child(5) {
+      float: left;
+      width: 100%; } }
+  @media screen and (max-width: 959px) {
     footer .col-footer {
       margin-bottom: 20px; } }
   footer .copyright {
